@@ -49,6 +49,8 @@ Qwt 6.1.4
     - QwtPlotItem::ScaleInterest enabled for all constructors of
       QwtPlotSeriesItem
 
+	- QwtPlotMarker::boundingRect fixed for HLine/VLine
+
 =========
 Qwt 6.1.3
 =========
